welcome.lessons.welcome.array.array123.Array123.scala.error
array123:8: error: type mismatch;
 found   : Boolean
 required: Array[Int]
    case _ => array123(newTableau(nums))
                                 ^array123:18: error: type mismatch;
 found   : Array[Int]
 required: Boolean
  return T
         ^